Remove usage of Set.of
Resolve merge conflict of ag/25337049

Change-Id: I5864b4b947a833ac09354b4f5c88fcc8912848b8
Merged-In: I8f478add2f7918e96d2b917edcb87bce78750803
Fixes: 296295120
Test: btest CtsDevicePolicyTestCases (checking it builds primarily)